# dhall-rust

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml  do.pl  release.toml  rust-toolchain  shell.nix  test.dhall  tests_buffer  update-tests.sh
abnf_to_pest/: Cargo.toml  README.md
abnf_to_pest/src/: lib.rs
dhall/: .gitignore  Cargo.toml  README.md  build.rs  compare.fish
dhall/src/: binary.rs  builtins.rs  context.rs  core.rs  ctxt.rs  dhall.abnf  dhall.pest.visibility  dhall_type.rs  error.rs  expr.rs  grammar.lalrpop  grammar_util.rs  imports.rs  lexer.rs  lib.rs  main.rs  normalize.rs  operations.rs  parser.rs  serde.rs  simple.rs  tests.rs  traits.rs  typecheck.rs  utils.rs
dhall/src/api/: mod.rs  serde.rs  static_type.rs
dhall/src/api/traits/: deserialize.rs  dynamic_type.rs  mod.rs  static_type.rs
dhall/src/core/: context.rs  mod.rs  thunk.rs  value.rs  valuef.rs  var.rs
dhall/src/error/: builder.rs  mod.rs
dhall/src/error/text/: HandlerInputTypeMismatch.txt  HandlerNotAFunction.txt  InvalidAlterantiveType.txt  InvalidFieldType.txt  MissingHandler.txt  MustMergeUnion.txt  NotAFunction.txt  TypeMismatch.txt
dhall/src/errors/: InvalidAlterantive.txt  InvalidInputType.txt  InvalidListElement.txt  InvalidListType.txt  InvalidOptionalElement.txt  NoDependentLet.txt
dhall/src/operations/: kind.rs  mod.rs  normalization.rs  typecheck.rs
dhall/src/phase/: .resolve.rs.swp  binary.rs  mod.rs  normalize.rs  parse.rs  resolve.rs  typecheck.rs
dhall/src/semantics/: builtins.rs  hir.rs  mod.rs  parse.rs  resolve.rs  to_expr.rs
dhall/src/semantics/core/: context.rs  mod.rs  value.rs  value_kind.rs  valuef.rs  var.rs  visitor.rs
dhall/src/semantics/error/: mod.rs
dhall/src/semantics/nze/: env.rs  lazy.rs  mod.rs  nir.rs  normalize.rs  nzexpr.rs  value.rs  var.rs  visitor.rs
dhall/src/semantics/phase/: binary.rs  mod.rs  normalize.rs  parse.rs  resolve.rs  typecheck.rs
dhall/src/semantics/resolve/: cache.rs  env.rs  hir.rs  mod.rs  resolve.rs
dhall/src/semantics/tck/: env.rs  mod.rs  tir.rs  tyexpr.rs  typecheck.rs
dhall/src/syntax/: binary.rs  mod.rs  parser.rs
dhall/src/syntax/ast/: expr.rs  import.rs  label.rs  map.rs  mod.rs  span.rs  text.rs  visitor.rs
dhall/src/syntax/binary/: decode.rs  encode.rs  mod.rs
dhall/src/syntax/core/: expr.rs  span.rs  visitor.rs
dhall/src/syntax/text/: dhall.abnf  dhall.pest.visibility  mod.rs  parser.rs  printer.rs
dhall/src/traits/: deserialize.rs  dynamic_type.rs  mod.rs  static_type.rs
dhall/tests/: dhall_type.rs  macros.rs  misc.rs  normalization.rs  parser.rs  spec.rs  tests.rs  traits.rs  typecheck.rs
dhall/tests/common/: mod.rs
dhall/tests/errors/import/: cycle.txt
dhall/tests/import/failure/: alternativeEnv.txt  alternativeEnvMissing.txt  cycle.txt  hashMismatch.txt  importBoundary.txt  missing.txt  referentiallyInsane.txt
dhall/tests/parser/failure/: ImportHeadersExteriorHash.txt  ProjectionByTypeNeedsParens.txt  annotation.txt  assertBinding.txt  boundBuiltins.txt  builtinWithIndex.txt  doubleBoundsNeg.txt  doubleBoundsPos.txt  fSomeX.txt  importAccess.txt  incompleteIf.txt  mandatoryNewline.txt  nonBase16Hash.txt  nonCharacter.txt  nonCharacterUnbraced.txt  nonUtf8.txt  surrogatePairUnbraced.txt
dhall/tests/parser/success/: annotationsB.txt  builtinNameAsFieldB.txt  builtinsB.txt  collectionImportTypeB.txt  fieldsB.txt  forallB.txt  functionTypeB.txt  hexadecimalB.txt  labelB.txt  lambdaB.txt  leadingSeparatorsB.txt  listB.txt  mergeB.txt  missingSlashB.txt  naturalB.txt  operatorsB.txt  preferMissingNoSpacesB.txt  quotedBoundVariableB.txt  quotedLabelB.txt  quotedRecordLabelB.txt  quotedUnionLabelB.txt  recordB.txt  recordProjectionByExpressionB.txt  toMapB.txt  usingToMapB.txt
dhall/tests/type-errors/: hurkensParadox.txt  mixedUnions.txt  recordOfKind.txt
dhall/tests/type-errors/unit/: AnnotationRecordWrongFieldName.txt  AnnotationRecordWrongFieldType.txt  AssertAlphaTrap.txt  AssertDoubleZeros.txt  AssertNotEquivalence.txt  AssertTriviallyFalse.txt  CompletionWithWrongOverridenType.txt  EquivalenceNotSameType.txt  EquivalenceNotTerms.txt  FunctionApplicationArgumentNotMatch.txt  FunctionApplicationIsNotFunction.txt  FunctionArgumentTypeNotAType.txt  FunctionTypeArgumentTypeNotAType.txt  IfBranchesNotMatch.txt  IfBranchesNotType.txt  IfNotBool.txt  LetWithWrongAnnotation.txt  ListLiteralEmptyNotType.txt  ListLiteralNotType.txt  ListLiteralTypesNotMatch.txt  MergeAlternativeHasNoHandler.txt  MergeAnnotationMismatch.txt  MergeEmptyNeedsDirectAnnotation1.txt  MergeEmptyWithoutAnnotation.txt  (+58 more)
dhall_core/: Cargo.toml
dhall_core/src/: context.rs  core.rs  dhall_type.rs  grammar.lalrpop  grammar_util.rs  import.rs  label.rs  lexer.rs  lib.rs  parser.rs  printer.rs  text.rs  visitor.rs
dhall_generated_parser/: Cargo.toml  build.rs
dhall_generated_parser/src/: dhall.pest.visibility  lib.rs
dhall_parser/: Cargo.toml  build.rs
dhall_parser/src/: dhall.abnf  dhall.pest.visibility  lib.rs
dhall_proc_macros/: Cargo.toml  README.md
dhall_proc_macros/src/: derive.rs  lib.rs  make_parser.rs  parse_children.rs  parser.rs  quote.rs
dhall_syntax/: Cargo.toml  build.rs
dhall_syntax/src/: core.rs  lib.rs  parser.rs  printer.rs  visitor.rs
dhall_syntax/src/core/: context.rs  expr.rs  import.rs  map.rs  mod.rs  span.rs  text.rs  visitor.rs
improved_slice_patterns/: Cargo.toml  README.md
improved_slice_patterns/src/: lib.rs
pest_consume/: Cargo.toml
pest_consume/examples/csv/: csv.pest  main.rs
pest_consume/src/: lib.rs
pest_consume_macros/: Cargo.toml
pest_consume_macros/src/: lib.rs  make_parser.rs  match_inputs.rs  match_nodes.rs  parse_children.rs
serde_dhall/: Cargo.toml  release.toml
serde_dhall/src/: deserialize.rs  error.rs  lib.rs  options.rs  serde.rs  serialize.rs  shortcuts.rs  simple.rs  static_type.rs  value.rs
serde_dhall/src/options/: de.rs  mod.rs  ser.rs
serde_dhall/tests/: de.rs  enum_tests.rs  serde.rs  simple_type.rs  simple_value.rs  traits.rs  version_numbers.rs  wasm.rs
(+349 files in other folders)
