cargo-features = ["profile-overrides"]

[workspace]
members = [
    "abnf_to_pest",
    "dhall",
    "dhall_parser",
]

# # Parser is super slow when not optimized
# [profile.dev.overrides.dhall_parser]
# opt-level = 3
# [profile.dev.overrides.dhall_core]
# opt-level = 3
# [profile.dev.overrides.dhall]
# opt-level = 3
# [profile.dev]
# opt-level = 3

