cargo-features = ["profile-overrides"]

[workspace]
members = [
    "abnf_to_pest",
    "dhall",
    "dhall_generated_parser",
    "dhall_syntax",
    "dhall_proc_macros",
    "improved_slice_patterns",
]

# # Parser is super slow when not optimized
# [profile.dev.overrides.dhall_parser]
# opt-level = 3
# [profile.dev.overrides.dhall_syntax]
# opt-level = 3
# [profile.dev.overrides.dhall]
# opt-level = 3
# [profile.dev]
# opt-level = 3

