[package]
name = "abnf_to_pest"
# remember to update html_root_url
version = "0.5.1-dev"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A tiny crate that helps convert ABNF grammars to pest"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"

[lib]
doctest = false

[dependencies]
abnf = "0.12.0"
indexmap = "1.0.2"
itertools = "0.10.3"
pretty = "0.11.3"
