[package]
name = "dhall"
# remember to update html_root_url
version = "0.5.3"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Implementation of the Dhall configuration language"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"
build = "build.rs"
include = ["src/**/*", "README.md", "build.rs"]

[dependencies]
annotate-snippets = "0.7.0"
hex = "0.4.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
once_cell = "1.3.1"
percent-encoding = "2.1.0"
pest = "2.1"
pest_consume = "1.0"
serde = "1.0"
serde_cbor = "0.9.0"
sha2 = "0.9.0"
url = "2.1"

# Reqwest needs proper async support to work on wasm. So no remote imports on
# wasm for now.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.10", features = ["blocking"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
version-sync = "0.9"
rand = "0.7"

[build-dependencies]
walkdir = "2"
abnf_to_pest = { version = "^0.5.0", path = "../abnf_to_pest" }
pest_generator = "2.1.3"
quote = "1.0"


