[package]
name = "dhall"
# remember to update html_root_url
version = "0.8.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Implementation of the Dhall configuration language"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"
build = "build.rs"
include = ["src/**/*", "README.md", "build.rs"]

[features]
default = [ "reqwest" ]

[[test]]
name = "spec"
harness = false
path = "tests/spec.rs"

[dependencies]
annotate-snippets = "0.7.0"
hex = "0.4.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
once_cell = "1.3.1"
percent-encoding = "2.1.0"
pest = "2.1"
pest_consume = "1.0"
serde = "1.0"
serde_cbor = "0.11.0"
sha2 = "0.9.0"
url = "2.1"

# Reqwest needs proper async support to work on wasm. So no remote imports on
# wasm for now.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.10", features = ["blocking"], optional = true }

[dev-dependencies]
anyhow = "1.0.28"
colored-diff = "0.2.2"
libtest-mimic = "0.3.0"
rand = "0.7"
version-sync = "0.9"
walkdir = "2"

[build-dependencies]
walkdir = "2"
abnf_to_pest = { version = "^0.5.0", path = "../abnf_to_pest" }
pest_generator = "2.1.3"
quote = "1.0"


