[package]
name = "dhall"
# remember to update html_root_url
version = "0.12.0-dev"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Implementation of the Dhall configuration language"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"
build = "build.rs"
include = ["src/**/*", "README.md", "build.rs"]

[features]
default = [ "reqwest" ]

[[test]]
name = "spec"
harness = false
path = "tests/spec.rs"

[dependencies]
annotate-snippets = "0.9.0"
elsa = "1.3.2"
half = "2.1.0"
hex = "0.4.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
minicbor = { version = "0.18.0", features = ["alloc", "half"] }
once_cell = "1.3.1"
percent-encoding = "2.1.0"
pest = "2.1"
pest_consume = "1.1"
sha2 = "0.10.2"
url = "2.1"

# Reqwest needs proper async support to work on wasm. So no remote imports on
# wasm for now.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking"], optional = true }
home = "0.5.3"

[dev-dependencies]
anyhow = "1.0.28"
colored-diff = "0.2.2"
fs_extra = "1.2.0"
libtest-mimic = "0.5.0"
rand = "0.8"
version-sync = "0.9"
walkdir = "2"

[build-dependencies]
abnf_to_pest = { version = "^0.5.1-dev", path = "../abnf_to_pest" }
pest_generator = "2.1.3"
quote = "1.0"
