[package]
name = "dhall_core"
version = "0.1.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
doctest = false

[build-dependencies]
lalrpop = "0.16.3"

[dependencies]
bytecount = "0.5.1"
itertools = "0.8.0"
lalrpop-util = "0.16.3"
nom = "3.0.0"
term-painter = "0.2.3"
pest = { git = "https://github.com/pest-parser/pest" }
dhall_parser = { path = "../dhall_parser" }
