[package]
name = "dhall_core"
version = "0.1.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
edition = "2018"

[lib]
doctest = false

[dependencies]
itertools = "0.8.0"
pest = { git = "https://github.com/pest-parser/pest" }
dhall_parser = { path = "../dhall_parser" }
iter_patterns = { path = "../iter_patterns" }
