[package]
name = "dhall_core"
version = "0.1.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
edition = "2018"

[lib]
doctest = false

[dependencies]
itertools = "0.8.0"
pest = "2.1"
dhall_generated_parser = { path = "../dhall_generated_parser" }
improved_slice_patterns = { version = "1.0.1", path = "../improved_slice_patterns" }
