[package]
name = "dhall_generated_parser"
version = "0.1.0"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
edition = "2018"
build = "build.rs"

[lib]
test = false
doctest = false

[build-dependencies]
abnf_to_pest = { version = "0.1.1", path = "../abnf_to_pest" }

[dependencies]
pest = "2.1"
pest_derive = "2.1"
