[package]
name = "dhall_parser"
version = "0.1.0"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
test = false
doctest = false

[build-dependencies]
abnf_to_pest = { path = "../abnf_to_pest" }
pest_generator = "2.1"
quote = "0.6.11"

[dependencies]
pest = { git = "https://github.com/pest-parser/pest" }
