[package]
name = "dhall_proc_macros"
version = "0.1.0"  # remember to update html_root_url
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Macros for dhall"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
edition = "2018"

[lib]
proc-macro = true
doctest = false

[dependencies]
itertools = "0.8.0"
quote = "1.0.2"
proc-macro2 = "1.0.2"
syn = "1.0.5"
