[package]
name = "dhall_syntax"
version = "0.1.0"
authors = ["NanoTech <nanotech@nanotechcorp.net>", "Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
edition = "2018"

[lib]
doctest = false

[dependencies]
itertools = "0.8.0"
percent-encoding = "2.1.0"
pest = "2.1"
either = "1.5.2"
take_mut = "0.2.2"
hex = "0.3.2"
lazy_static = "1.4.0"
dhall_generated_parser = { path = "../dhall_generated_parser" }
# pest_consume = { path = "../../pest_consume/pest_consume" }
pest_consume = "1.0"
