[package]
name = "pest_consume_macros"
version = "0.1.0"  # remember to update html_root_url
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Macros for pest_consume"
readme = "README.md"
repository = "https://github.com/Nadrieril/dhall-rust"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.2"
proc-macro-hack = "0.5.9"
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
