[package]
name = "serde_dhall"
version = "0.1.0"  # remember to update html_root_url and README
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Dhall support for serde"
readme = "../README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
keywords = ["serde", "serialization", "dhall"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dhall = { version = "0.1.1", path = "../dhall" }
dhall_proc_macros = { version = "0.1.0", path = "../dhall_proc_macros" }
