[package]
name = "serde_dhall"
# remember to update html_root_url, README and changelog
version = "0.4.0"
authors = ["Nadrieril <nadrieril@users.noreply.github.com>"]
license = "BSD-2-Clause"
description = "Dhall support for serde"
readme = "../README.md"
repository = "https://github.com/Nadrieril/dhall-rust"
keywords = ["serde", "serialization", "dhall"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dhall = { version = "=0.4.0", path = "../dhall" }
dhall_proc_macros = { version = "=0.4.0", path = "../dhall_proc_macros" }
doc-comment = "0.3"
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1"

[dev-dependencies]
version-sync = "0.8"
